--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <main>
-    <img src="/assets/images/image-omelette.jpeg" alt="picture of an omelette">
+    <img src="./assets/images/image-omelette.jpeg" alt="picture of an omelette">
      <h1 style="color: yellow;" class="biggest-text" id="biggest-text">Simple Omlette Recipe</h1> 
 
     <p>
