--- a/index.html
+++ b/index.html
@@ -15,25 +15,12 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-
-    h1 {
-      color: brown;
-    }
-
-    .biggest-text {
-      color: blue;
-    }
-
-    #biggest-text {
-      color: green;
-    }
-
   </style>
 </head>
 <body>
   <main>
     <img src="./assets/images/image-omelette.jpeg" alt="picture of an omelette">
-     <h1 style="color: yellow;" class="biggest-text" id="biggest-text">Simple Omlette Recipe</h1> 
+     <h1 >Simple Omlette Recipe</h1> 
 
     <p>
       An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
